# osmosis-boilerplate-contract

./: Cargo.toml  README.md
artifacts/: checksums.txt  checksums_intermediate.txt  example.wasm
contracts/example/: Cargo.toml
contracts/example/src/: contract.rs  contract_tests.rs
scripts/: package-lock.json  package.json
