[package]
name = "example"
version = "0.1.0"
authors = ["grod220 <gabe.r@delphilabs.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
osmosis-boilerplate-contract = { version = "0.1.0", path = "../../packages/osmosis-boilerplate-contract" }

cosmwasm-std = "1.0.0"
cw-storage-plus = "0.13.2"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
